# U.L.T.R.O.N

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  DEBUGGING_REPORT.md  DEPRECATED_start_pyqt.bat  Dockerfile  FINAL_PROJECT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PHASE_B_SUMMARY.md  README.md  ULTRON_4_BUYUK_PLAN.md  ai_bridge_status.md  debug_launcher.bat  debug_reasoning_v2.py  diagnose_engine.py  docker-compose.yaml  gemini_requests.md  pyproject.toml  qwen_responses.md  requirements.txt  start-remote-access.bat  start-ultron-desktop.bat  start-voice.bat  start.bat  test_batch.bat  test_batch2.bat  test_enhancements.py  test_phase3.py  test_ws.py  walkthrough.md
.continue/agents/: config.json
.github/workflows/: python-tests.yml
config/: agents.yaml  mcp.template.yaml
context/: README.md  active_session.md
docs/: ARCHITECTURE.md  AUTONOMOUS_EVOLUTION_GUIDE.md  CHANGELOG.md  CLAUDE_SKILLS_REPORT.md  CONTEXT_MANAGEMENT.md  ENHANCEMENT_SUMMARY.md  GEMINI_ARCHITECTURE.md  PROMPT.txt  QWEN_GEMINI_COLLAB.md  README.md  RELEASE_NOTES_v2.1.md  SKILLS_INVENTORY.md  SYSTEM_STATUS.md  api-reference.md  providers.md  workspace.md
docs/guides/: UI_ENHANCEMENTS.md  UI_TESTING_CHECKLIST.md
docs/reports/: DEBUGGING_REPORT.md  PHASE_B_SUMMARY.md  TEST_RESULTS.md
jarvis-desktop/: package-lock.json  package.json  tailwind.config.js
jarvis-desktop/src/: App.tsx  index.css
jarvis/api/: main.py
scratch/: check_imports.py  comprehensive_test.py  count_stats.py  debug_ollama.py  debug_reasoning.py  distill_wisdom.py  dump_audit.py  hallucination_test.py  self_audit.py  self_heal_demo.py  test_api_keys.py  test_catalyst.py  test_functional_analysis.py  test_import.py  test_reasoning.py  test_sandbox_pandas.py  test_tts.py  test_voicebox.py  test_ws_chat.py
scripts/: ai_bridge_monitor.py  autonomous_evolution.py  check_gpu.py  check_schema.py  health_checker.py  test_airllm_405b.py  test_langgraph_coder.py  test_qwen_gemini_collab.py  test_run.py  ultron_auto_patcher.py
scripts/data_pipeline/: clean_and_merge_data.py  fetch_massive_datasets.py  generate_dpo_data.py  generate_master_dataset.py  generate_synthetic_data.py  harvest_conversations.py  sync_training_data.py
scripts/maintenance/: ultron_daemons.py  ultron_watchdog.py
skills/autonomous_goal_runner/: SKILL.md
skills/game_dev_unreal_blueprint/: SKILL.md
tests/: test_agents.py  test_ai_message_queue.py  test_api_key_guard.py  test_context_manager.py  test_enhancements.py  test_mcp.py  test_memory.py  test_prompt_guard.py  test_providers.py  test_react_orchestrator.py  test_rpa_sandbox.py  test_skill_engine.py  test_ssrf_guard.py  test_system.py  test_v3_final_audit.py  test_v3_new_features.py  v3_integration_test.py
tests/v2/: test_infrastructure.py  test_personality.py
ultron/: __init__.py  bootstrap.py  cli.py  memory.py  tts_voice.py  voice_app.py  voice_pipeline.py
ultron-desktop/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ultron-desktop/src/: App.tsx  config.ts  i18n.ts  index.css  main.tsx
ultron/actions/: ask_architect.py  deep_research.py  open_app.py  web_search.py
ultron/agents/: architect.py  autonomous_researcher.py  base.py  calendar_agent.py  clipboard_agent.py  cloner.py  coder.py  coder_langgraph.py  composer_agent.py  debate_agent.py  document_agent.py  email_agent.py  error_analyzer.py  files_agent.py  gaming_agent.py  github_agent.py  meeting_agent.py  nlp_agent.py  researcher.py  rpa_operator.py  (+6 more)
(+353 files in other folders)
